--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ rel="stylesheet">
 
                         <div class="card">
                             <img src="./assets/card1img.jpeg" class="card-img">
-                            <p class="card-title">Top 50 - Global</p>
+                            <p class="card-title">Top 50 - Globals</p>
                             <p class="card-info">Your daily updates of the most played...</p>
                         </div>
                            </div>
